2019-09-16  Allen D. Ball  <ball@hcf.dev>

	* Released version 1.0.0.

2018-11-16  Allen D. Ball  <ball@iprotium.com>

	* Added yum-repos-d-* roles.

2018-08-27  Allen D. Ball  <ball@iprotium.com>

	* roles/aws.rc/templates/etc/aws.rc:
	Do not include date-time in ec2-attach-volume and
	ec2-detach-volume functions' output.

2018-08-22  Allen D. Ball  <ball@iprotium.com>

	* roles/auto.ebs: Configure SELinux local policy.

2018-08-21  Allen D. Ball  <ball@iprotium.com>

	* roles/aws.rc/templates/etc/aws.rc:
	Changed ec2-attach-volume and ec2-detach-volume functions to use
	text output.

2018-08-17  Allen D. Ball  <ball@iprotium.com>

	* roles/aws.rc: /etc/aws.rc

	* roles/auto.ebs: /etc/auto.ebs

	* roles/user-data: Provide {{ user_data }} for ec2.

2018-08-08  Allen D. Ball  <ball@iprotium.com>

	* roles/auto.ebs/templates/etc/auto.ebs-detach.sh:
	Initial writing: Detaches volumes that are not mounted.
	Run by systemd (PathModified=/ebs/).

2018-08-07  Allen D. Ball  <ball@iprotium.com>

	* roles/auto.ebs/templates/etc/auto.ebs:
	Handle AMI root volume special case.
