@@ -1,3 +1,7 @@
+2020-03-13  Allen D. Ball  <ball@hcf.dev>
+
+	* roles/certbot: Initial writing.
+
 2019-09-16  Allen D. Ball  <ball@hcf.dev>
 
 	* Released version 1.0.0.
